agv_ws/log/build_2024-05-03_14-44-08/movement/stdout_stderr.log
running egg_info
writing ../../build/movement/movement.egg-info/PKG-INFO
writing dependency_links to ../../build/movement/movement.egg-info/dependency_links.txt
writing entry points to ../../build/movement/movement.egg-info/entry_points.txt
writing requirements to ../../build/movement/movement.egg-info/requires.txt
writing top-level names to ../../build/movement/movement.egg-info/top_level.txt
reading manifest file '../../build/movement/movement.egg-info/SOURCES.txt'
writing manifest file '../../build/movement/movement.egg-info/SOURCES.txt'
running build
running build_py
copying movement/wheel_controller_server.py -> /home/vboxuser/agv_ws/build/movement/build/lib/movement
running install
running install_lib
copying /home/vboxuser/agv_ws/build/movement/build/lib/movement/wheel_controller_server.py -> /home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement
byte-compiling /home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement/wheel_controller_server.py to wheel_controller_server.cpython-310.pyc
  File "/home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement/wheel_controller_server.py", line 59
    self.get_logger().info("Remaining Angle: " + str(remaining_angle)
                          ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/movement/movement.egg-info to /home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement-0.0.0-py3.10.egg-info
running install_scripts
Installing command_publisher_client script to /home/vboxuser/agv_ws/install/movement/lib/movement
Installing wheel_controller_server script to /home/vboxuser/agv_ws/install/movement/lib/movement
writing list of installed files to '/home/vboxuser/agv_ws/build/movement/install.log'
